<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="expect">敬请期待</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>
    <string name="loading">正在加载，请稍候....</string>
    <string name="network_error">网络异常，请检查网络连接！</string>
    <string name="retry_text">重试</string>
    <string name="back">返回</string>
    <string name="search">搜索</string>
    <string name="search_result">搜索结果</string>

    <string name="toast_message">Toast message</string>
    <string name="string_tips" translatable="false">%1$d秒</string>


    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>

    <string name="pref_key_transition_time1" translatable="false">pref_key_transition_time1</string>
    <string name="pref_key_transition_time2" translatable="false">pref_key_transition_time2</string>
    <string name="btn_smooth_scroll">Smooth scroll</string>
    <string name="btn_transition_time">Transition time</string>
    <string name="shop_search_header">海尔酒知道</string>

    <!--<string name="close">close</string>-->
    <!--<string name="add">ADD</string>-->
    <!--<string name="remove">REMOVE</string>-->
    <!--<string name="clear">CLEAR</string>-->
    <string name="zly_tips">赵丽颖，1987年10月16日出生于河北省廊坊市，中国内地影视女演员。
        2006年，因获得雅虎搜星比赛冯小刚组冠军而进入演艺圈；同年，在冯小刚执导的广告片《跪族篇》中担任女主角。
        2007年，参演个人首部电影《镖行天下之牡丹阁》。2011年，因在古装剧《新还珠格格》中饰演晴儿一角而
        被观众认识。2013年，凭借古装剧《陆贞传奇》获得更多关注。2014年10月，在第10届金鹰电视艺术节举办
        的投票活动中被选为“金鹰女神”；12月，凭借都市爱情剧《杉杉来了》获得第5届国剧盛典内地最具人气
        女演员奖；同年，成立海润传媒赵丽颖工作室。\n\n
        赵丽颖，1987年10月16日出生于河北省廊坊市，中国内地影视女演员。
        2006年，因获得雅虎搜星比赛冯小刚组冠军而进入演艺圈；同年，在冯小刚执导的广告片《跪族篇》中担任女主角。
        2007年，参演个人首部电影《镖行天下之牡丹阁》。2011年，因在古装剧《新还珠格格》中饰演晴儿一角而被观众认
        识。2013年，凭借古装剧《陆贞传奇》获得更多关注。2014年10月，在第10届金鹰电视艺术节举办的投票活动中被选
        为“金鹰女神”；12月，凭借都市爱情剧《杉杉来了》获得第5届国剧盛典内地最具人气女演员奖；同年，成立海润传
        媒赵丽颖工作室。\n\n
        赵丽颖，1987年10月16日出生于河北省廊坊市，中国内地影视女演员。
        2006年，因获得雅虎搜星比赛冯小刚组冠军而进入演艺圈；同年，在冯小刚执导的广告片《跪族篇》中担任女主角。
        2007年，参演个人首部电影《镖行天下之牡丹阁》。2011年，因在古装剧《新还珠格格》中饰演晴儿一角而被观众认识。
        2013年，凭借古装剧《陆贞传奇》获得更多关注。2014年10月，在第10届金鹰电视艺术节举办的投票活动中被选为“金鹰女神”;
        12月，凭借都市爱情剧《杉杉来了》获得第5届国剧盛典内地最具人气女演员奖；同年，成立海润传媒赵丽颖工作室。\n\n
        赵丽颖，1987年10月16日出生于河北省廊坊市，中国内地影视女演员。
        2006年，因获得雅虎搜星比赛冯小刚组冠军而进入演艺圈；同年，在冯小刚执导的广告片《跪族篇》中担任女主角。
        2007年，参演个人首部电影《镖行天下之牡丹阁》。2011年，因在古装剧《新还珠格格》中饰演晴儿一角而被观众认识。
        2013年，凭借古装剧《陆贞传奇》获得更多关注。2014年10月，在第10届金鹰电视艺术节举办的投票活动中被选为“金鹰女神”;
        12月，凭借都市爱情剧《杉杉来了》获得第5届国剧盛典内地最具人气女演员奖；同年，成立海润传媒赵丽颖工作室。\n\n
        赵丽颖，1987年10月16日出生于河北省廊坊市，中国内地影视女演员。
        2006年，因获得雅虎搜星比赛冯小刚组冠军而进入演艺圈；同年，在冯小刚执导的广告片《跪族篇》中担任女主角。
        2007年，参演个人首部电影《镖行天下之牡丹阁》。2011年，因在古装剧《新还珠格格》中饰演晴儿一角而被观众认识。
        2013年，凭借古装剧《陆贞传奇》获得更多关注。2014年10月，在第10届金鹰电视艺术节举办的投票活动中被选为“金鹰女神”;
        12月，凭借都市爱情剧《杉杉来了》获得第5届国剧盛典内地最具人气女演员奖；同年，成立海润传媒赵丽颖工作室。\n\n
        赵丽颖，1987年10月16日出生于河北省廊坊市，中国内地影视女演员。
        2006年，因获得雅虎搜星比赛冯小刚组冠军而进入演艺圈；同年，在冯小刚执导的广告片《跪族篇》中担任女主角。
        2007年，参演个人首部电影《镖行天下之牡丹阁》。2011年，因在古装剧《新还珠格格》中饰演晴儿一角而被观众认识。
        2013年，凭借古装剧《陆贞传奇》获得更多关注。2014年10月，在第10届金鹰电视艺术节举办的投票活动中被选为“金鹰女神”;
        12月，凭借都市爱情剧《杉杉来了》获得第5届国剧盛典内地最具人气女演员奖；同年，成立海润传媒赵丽颖工作室。\n\n
    </string>
    <string name="base_language">zh</string>
    <string name="language_cn">中文</string>
    <string name="language_en">ENGLISH</string>
    <string name="language_auto">自动</string>
    <string name="language_traditional">繁體</string>
    <string name="language_select">当前选择的语言: %s</string>
    <string name="system_language">当前系统语言: %1$s</string>
    <string name="user_select_language">当前用户选择语言: %s</string>

</resources>